Related: tdf#151898 set origin for implLoadRepositoryImage XGraphics

like we do when we get one from Image so we can treat these with the
same shortcuts we do for Image to have the option to pass the
underlying svg data to the final widget it ends up in

Change-Id: I13a5aecc73821e88f1958e1e1e9e7322628cce6e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142484
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit cb8a05bfccf77d5217f4f2e20b5898d6a24f990d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142594
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>